--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Library</h1>
+    <div class="container"></div>
     <script src="/index.js"></script>
   </body>
 </html>
