--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Library</h1>
+    <header id="header">
+      <h1>Library</h1>
+    </header>
     <div class="container"></div>
     <script src="/index.js"></script>
   </body>
