--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="header">
       <h1>Library</h1>
+      <button class="" id="bookBtn">NEW BOOK</button>
     </header>
+    <div class="modal">
+      <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <form action="submit">
+          <label for="title">Title:</label>
+          <input type="text" name="title" id="title" placeholder="Book Title" />
+          <label for="author">Author:</label>
+          <input
+            type="text"
+            name="author"
+            id="author"
+            placeholder="Author's Name"
+          />
+          <label for="pages">Page Count:</label>
+          <input type="text" name="pages" id="pages" placeholder="Page Count" />
+        </form>
+      </div>
+    </div>
     <div class="container"></div>
     <script src="/index.js"></script>
   </body>
