--- a/index.html
+++ b/index.html
@@ -12,21 +12,43 @@
       <h1>Library</h1>
       <button class="" id="bookBtn">NEW BOOK</button>
     </header>
+
     <div class="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <form action="submit">
-          <label for="title">Title:</label>
-          <input type="text" name="title" id="title" placeholder="Book Title" />
-          <label for="author">Author:</label>
-          <input
-            type="text"
-            name="author"
-            id="author"
-            placeholder="Author's Name"
-          />
-          <label for="pages">Page Count:</label>
-          <input type="text" name="pages" id="pages" placeholder="Page Count" />
+
+        <form action="submit" id="modal-form">
+          <div class="title-field">
+            <label for="title">Title:</label>
+            <input
+              type="text"
+              name="title"
+              id="title"
+              placeholder="Book Title"
+            />
+          </div>
+
+          <div class="author-field">
+            <label for="author">Author:</label>
+            <input
+              type="text"
+              name="author"
+              id="author"
+              placeholder="Author's Name"
+            />
+          </div>
+
+          <div class="pages-field">
+            <label for="pages">Page Count:</label>
+            <input
+              type="text"
+              name="pages"
+              id="pages"
+              placeholder="Page Count"
+            />
+          </div>
+
+          <button type="submit">Add Book</button>
         </form>
       </div>
     </div>
