--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button class="" id="bookBtn">NEW BOOK</button>
     </header>
 
-    <div class="modal">
+    <div class="modal" id="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
 
