--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="header">
       <h1>Library</h1>
-      <button class="" id="bookBtn">NEW BOOK</button>
+      <button class="bookBtn" id="bookBtn">NEW BOOK</button>
     </header>
 
     <div class="modal" id="modal">
@@ -46,6 +46,11 @@
               id="pages"
               placeholder="Page Count"
             />
+          </div>
+
+          <div class="read-checkbox">
+            <label for="read">Read:</label>
+            <input type="checkbox" name="read" id="read" />
           </div>
 
           <button type="submit">Add Book</button>
