--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Library App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="header">
-      <h1>Library</h1>
+      <h1>Library Tracker App</h1>
       <button class="bookBtn" id="bookBtn">NEW BOOK</button>
     </header>
 
