--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>My Library App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header">
+    <header id="header" class="container">
       <h1>Library Tracker App</h1>
       <button class="bookBtn" id="bookBtn">NEW BOOK</button>
     </header>
@@ -57,7 +63,7 @@
         </form>
       </div>
     </div>
-    <div class="container"></div>
+    <div class="contaier" id="book-list"></div>
     <script src="/index.js"></script>
   </body>
 </html>
